--- a/pom.xml
+++ b/pom.xml
@@ -202,7 +202,14 @@
 			<!-- site -->
 			<plugin>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>4.0.0-M11</version>
+				<version>3.12.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.sentrysoftware.maven</groupId>
+						<artifactId>maven-skin-tools</artifactId>
+						<version>1.2.00</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<!-- jar -->
